# fraxis

./: .gitignore
main/: CMakeLists.txt  GdiSimulator.sln  GdiSimulator.slnx  main.cpp
main/Applications/: ApplicationsTask.cpp  ApplicationsTask.hpp  main.cpp
main/Common/Components/: ComponentModel.hpp  DirtyFlag.hpp  IDriver.hpp
main/Common/Components/I2c/: EspI2c.cpp  EspI2c.hpp  I2c.cpp  I2c.hpp  WindowsI2c.cpp  WindowsI2c.hpp
main/Common/Components/Lcd1602Display/: EspLcd1602DisplayDriver.cpp  EspLcd1602DisplayDriver.hpp  Lcd1602DisplayDriver.cpp  Lcd1602DisplayModel.cpp  WindowsLcd1602DisplayDriver.cpp  WindowsLcd1602DisplayDriver.hpp
main/Common/Components/Lcd2004Display/: Lcd2004DisplayDriver.hpp  Lcd2004DisplayModel.cpp  Lcd2004DisplayModel.hpp  WindowsLcd2004DisplayDriver.hpp
main/Common/Components/LedStrip/: EspLedStripDriver.cpp  EspLedStripDriver.hpp  LedStripDriver.hpp  LedStripModel.cpp  LedStripModel.hpp  LedStripsCurrentLimiter.cpp  (+5 more)
main/Common/SharedUtils/: MathUtils.hpp
main/Core/Components/: AtariJoystick.cpp  AtariJoystick.hpp  ComponentsBuilder.cpp  ComponentsBuilder.hpp  IComponent.hpp  Lcd1602Display.cpp  Lcd1602Display.hpp  LedStrips.cpp  LedStrips.hpp  Mcp23017.cpp  Mcp23017.hpp  PinIo.cpp  PinIo.hpp  PinIoMappings.cpp  PinIoMappings.hpp  Tm1637.cpp  Tm1637.hpp
main/Core/Menu/: MenuInput.cpp  MenuInput.hpp  MenuRenderer.cpp  MenuRenderer.hpp  MenuSimulator.cpp  MenuSimulator.hpp  MenuStates.cpp  MenuStates.hpp
main/Core/Services/: IRtos.hpp  IRtosQueue.hpp  IRtosTask.hpp  ITimer.hpp  Rtos.cpp  Rtos.hpp  Timer.cpp  Timer.hpp
main/Core/SharedUtils/: Debug.cpp  Debug.hpp  MathUtils.hpp
main/Core/TaskManager/: TaskManager.cpp  TaskManager.hpp
main/ESP32/: EspI2c.cpp  EspI2c.hpp
main/ESP32/Components/: EspComponentsBuilder.cpp  EspComponentsBuilder.hpp  EspLcd1602Display.cpp  EspLcd1602Display.hpp  EspLedStrips.cpp  EspLedStrips.hpp  EspMcp23017.cpp  EspMcp23017.hpp  EspMcp23017Registers.hpp  EspTm1637.cpp  EspTm1637.hpp  Ws2812Rmt.cpp
main/ESP32/Services/: EspRtos.cpp  EspRtos.hpp  EspRtosQueue.cpp  EspRtosQueue.hpp  EspRtosTask.cpp  EspRtosTask.hpp  EspTimer.cpp  EspTimer.hpp
main/GdiSimulator/: GdiSimulator.aps  GdiSimulator.cpp  GdiSimulator.rc  GdiSimulator.vcxproj  GdiSimulator.vcxproj.filters  Resource.h
main/L1_Composition/: main.cpp
main/L1_Composition/ComponentsBuilder/: ComponentsBuilder.cpp  ComponentsBuilder.hpp  EspComponentsBuilder.cpp  EspComponentsBuilder.hpp
main/L1_Composition/Context/: Context.cpp  Context.hpp  DeviceDriversContext.cpp  DeviceDriversContext.hpp  DeviceModelsContext.cpp  DeviceModelsContext.hpp  DomainModelsContext.cpp  DomainModelsContext.hpp  RtosQueuesContext.cpp  RtosQueuesContext.hpp  RtosTasksContext.cpp  RtosTasksContext.hpp  ServicesContext.cpp  ServicesContext.hpp
main/L2_Applications/: ApplicationsManager.cpp  ApplicationsManager.hpp  ApplicationsTask.cpp  ApplicationsTask.hpp  IEventListener.hpp  Queue.cpp  Queue.hpp  Task.cpp  Task.hpp
main/L2_Applications/Applications/: Application.cpp  Application.hpp  IApplication.hpp
main/L2_Applications/IoStates/: ButtonState.cpp  ButtonState.hpp  IoStates.cpp  IoStates.hpp  JoystickState.cpp  JoystickState.hpp
main/L3_Messages/: InputQueue.cpp  InputQueue.hpp  LedStripsQueue.cpp  LedStripsQueue.hpp  OutputQueue.cpp  OutputQueue.hpp
main/L4_DomainModels/IoPins/: IoPins.cpp  IoPins.hpp
main/L4_DomainModels/Lcd2004/: Lcd2004.cpp  Lcd2004.hpp
main/L4_DomainModels/LedStrips/: LedStrips.cpp  LedStrips.hpp
main/L4_DomainModels/Tasks/: I2cTask.cpp  I2cTask.hpp  LedStripsTask.cpp  LedStripsTask.hpp
main/L4_DomainModels/Tm1637/: Tm1637.cpp  Tm1637.hpp
main/L5_DeviceModels/Lcd2004/: Lcd2004Model.cpp  Lcd2004Model.hpp
main/L5_DeviceModels/Mcp23017/: Mcp23017Model.cpp  Mcp23017Model.hpp
main/L5_DeviceModels/Tm1637/: Tm1637Model.cpp  Tm1637Model.hpp
main/L5_DeviceModels/Ws28xx/: Ws28xxModel.cpp  Ws28xxModel.hpp
main/L6_DeviceDrivers/I2c/: EspI2cDriver.cpp  EspI2cDriver.hpp  I2cDriver.cpp  I2cDriver.hpp
main/L6_DeviceDrivers/Lcd2004/: EspLcd2004Driver.cpp  EspLcd2004Driver.hpp  Lcd2004Driver.cpp  Lcd2004Driver.hpp
main/L6_DeviceDrivers/Mcp23017/: EspMcp23017Driver.cpp  EspMcp23017Driver.hpp  Mcp23017Driver.cpp  Mcp23017Driver.hpp
main/L6_DeviceDrivers/Tm1637/: EspTm1637Driver.cpp  EspTm1637Driver.hpp  Tm1637Driver.cpp  Tm1637Driver.hpp
main/L6_DeviceDrivers/Ws28xx/: EspWs28xxDriver.cpp  EspWs28xxDriver.hpp  Ws28xxDriver.cpp  Ws28xxDriver.hpp
main/L8_Services/: EspRtosQueue.cpp
main/L8_Services/Assert/: Assert.cpp  Assert.hpp
main/L8_Services/Debug/: Debug.cpp
main/L8_Services/Math/: MathUtils.hpp
main/L8_Services/Random/: EspRandom.cpp  EspRandom.hpp  Random.hpp  WindowsRandom.cpp  WindowsRandom.hpp
main/L8_Services/Rtos/: EspRtos.cpp  EspRtos.hpp  Rtos.hpp
main/L8_Services/RtosQueue/: RtosQueue.hpp  WindowsRtosQueue.cpp  WindowsRtosQueue.hpp
main/L8_Services/RtosTask/: EspRtosTask.cpp  RtosTask.hpp
main/Tasks/I2cTask/: I2cTask.cpp  I2cTask.hpp
main/Tasks/LedStripsTask/: LedStripsTask.cpp  LedStripsTask.hpp
main/Tasks/Messages/: LedStripMessage.hpp  Message.hpp
main/Tasks/SystemTask/: SystemTask.cpp  SystemTask.hpp
main/Windows/: DebugPrint.cpp  DebugPrint.hpp  GdiScreen.cpp  GdiScreen.hpp  GdiSimulator.cpp  GdiSimulator.hpp  GdiSimulator.vcxproj  GdiSimulator.vcxproj.filters  IGdiMouseInput.hpp
main/Windows/Components/: GdiAtariJoystick.cpp  GdiAtariJoystick.hpp  GdiButton.cpp  GdiButton.hpp  GdiLcd1602Display.cpp  GdiLcd1602Display.hpp  GdiLed.cpp  GdiLed.hpp  GdiLedStrips.cpp  GdiLedStrips.hpp  GdiSevenDigitsDisplay.cpp  GdiSevenDigitsDisplay.hpp  WindowsComponentsBuilder.cpp  WindowsComponentsBuilder.hpp  WindowsLcd1602Display.cpp  WindowsLcd1602Display.hpp  WindowsLedStripDriver.cpp  WindowsLedStripDriver.hpp  WindowsLedStrips.cpp  WindowsLedStrips.hpp  WindowsMcp23017.cpp  WindowsMcp23017.hpp  WindowsRtos.cpp  WindowsRtos.hpp  WindowsRtosQueue.cpp  WindowsRtosQueue.hpp  WindowsRtosTask.cpp  WindowsRtosTask.hpp  WindowsTimer.cpp  WindowsTimer.hpp  WindowsTm1637.cpp  WindowsTm1637.hpp
(+150 files in other folders)
